# demucs-seven-stem

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/demucs_seven_stem/: __init__.py  audio_math.py  audio_ops.py  cli.py  core.py
tests/: test_audio_math.py  test_audio_ops.py  test_core.py
